<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textSize="24dp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/et_cantidad_dinero"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/ed_cantidad_dinero"
        android:inputType="number"
        android:padding="5dp" />

    <EditText
        android:id="@+id/et_tasa_interes"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/ed_tasa_interes"
        android:inputType="numberDecimal"
        android:padding="5dp" />

    <TextView
        android:id="@+id/tv_dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/tv_dias" />

    <TextView
        android:id="@+id/tv_resultado_dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_resultado_dias"
        android:textAlignment="center"
        android:layout_marginTop="0dp"/>


    <SeekBar
        android:id="@+id/sb_dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_calcular"
            style=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculo"
            android:text="@string/btn_calcular" />

        <Button
            android:id="@+id/btn_limpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/btn_limpiar" />

        <Button
            android:id="@+id/btn_impresion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_impresion" />
    </TableRow>

</LinearLayout>
